--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": ">=7.0",
-        "nesbot/carbon": "^1.26 || ^2.00",
+        "nesbot/carbon": "^1.26 || ^2.00 || ^3.00",
         "ramsey/uuid": "~3.7|~4.0",
         "symfony/var-dumper": "~3.3|~4.0|~5.0|^6.0|^7.0",
         "voku/portable-ascii": "^1.4|^2.0"
